added tailwind, etc.

--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,7 @@
               <div class="skill-category">
                 <div class="skill-item" style="--rating: 80%">
                   <div class="skill-name">
-                    <span>HTML</span>
+                    <span>HTML5</span>
                   </div>
                   <div class="skill-bar-container">
                     <div class="skill-progress"></div>
@@ -1268,6 +1268,26 @@
                 <div class="skill-item" style="--rating: 80%">
                   <div class="skill-name">
                     <span>CSS</span>
+                  </div>
+                  <div class="skill-bar-container">
+                    <div class="skill-progress"></div>
+                    <span class="skill-rating">8/10</span>
+                  </div>
+                </div>
+
+                <div class="skill-item" style="--rating: 80%">
+                  <div class="skill-name">
+                    <span>TAILWIND CSS</span>
+                  </div>
+                  <div class="skill-bar-container">
+                    <div class="skill-progress"></div>
+                    <span class="skill-rating">8/10</span>
+                  </div>
+                </div>
+
+                <div class="skill-item" style="--rating: 50%">
+                  <div class="skill-name">
+                    <span>BOOTSTRAP</span>
                   </div>
                   <div class="skill-bar-container">
                     <div class="skill-progress"></div>
@@ -1376,6 +1396,16 @@
                   <div class="skill-bar-container">
                     <div class="skill-progress"></div>
                     <span class="skill-rating">6.5/10</span>
+                  </div>
+                </div>
+
+                <div class="skill-item" style="--rating: 50%">
+                  <div class="skill-name">
+                    <span>Next.js</span>
+                  </div>
+                  <div class="skill-bar-container">
+                    <div class="skill-progress"></div>
+                    <span class="skill-rating">5/10</span>
                   </div>
                 </div>
               </div>
