updated to lowercase

--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@
 
                 <div class="skill-item" style="--rating: 80%">
                   <div class="skill-name">
-                    <span>TAILWIND CSS</span>
+                    <span>Tailwind</span>
                   </div>
                   <div class="skill-bar-container">
                     <div class="skill-progress"></div>
@@ -1287,11 +1287,11 @@
 
                 <div class="skill-item" style="--rating: 50%">
                   <div class="skill-name">
-                    <span>BOOTSTRAP</span>
+                    <span>Bootstrap</span>
                   </div>
                   <div class="skill-bar-container">
                     <div class="skill-progress"></div>
-                    <span class="skill-rating">8/10</span>
+                    <span class="skill-rating">5/10</span>
                   </div>
                 </div>
 
@@ -1389,16 +1389,6 @@
                   </div>
                 </div>
 
-                <div class="skill-item" style="--rating: 65%">
-                  <div class="skill-name">
-                    <span>React</span>
-                  </div>
-                  <div class="skill-bar-container">
-                    <div class="skill-progress"></div>
-                    <span class="skill-rating">6.5/10</span>
-                  </div>
-                </div>
-
                 <div class="skill-item" style="--rating: 50%">
                   <div class="skill-name">
                     <span>Next.js</span>
@@ -1406,6 +1396,16 @@
                   <div class="skill-bar-container">
                     <div class="skill-progress"></div>
                     <span class="skill-rating">5/10</span>
+                  </div>
+                </div>
+
+                <div class="skill-item" style="--rating: 65%">
+                  <div class="skill-name">
+                    <span>React</span>
+                  </div>
+                  <div class="skill-bar-container">
+                    <div class="skill-progress"></div>
+                    <span class="skill-rating">6.5/10</span>
                   </div>
                 </div>
               </div>
