--- a/index.html
+++ b/index.html
@@ -1435,6 +1435,16 @@
 
                 <div class="skill-item" style="--rating: 30%">
                   <div class="skill-name">
+                    <span>MongoDB</span>
+                  </div>
+                  <div class="skill-bar-container">
+                    <div class="skill-progress"></div>
+                    <span class="skill-rating">3/10</span>
+                  </div>
+                </div>
+
+                <div class="skill-item" style="--rating: 30%">
+                  <div class="skill-name">
                     <span>SQLite</span>
                   </div>
                   <div class="skill-bar-container">
