--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
           <div class="md:w-1/2 flex justify-center animate-on-scroll">
             <div class="relative">
               <div
-                class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl"
+                class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl group"
               >
                 <img
                   src="2by2(edited).png"
                   alt="Lord Immanuel S. Juanich"
-                  class="w-full h-full object-cover"
+                  class="w-full h-full object-cover transform transition-transform duration-500 ease-out group-hover:scale-110"
                 />
               </div>
             </div>
@@ -750,7 +750,7 @@
       </div>
     </section>
 
-    <footer class="py-8 bg-dark-900 text-white">
+    <footer id="contact" class="py-8 bg-dark-900 text-white">
       <div
         class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between space-y-6 md:space-y-0"
       >
