--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         class="container mx-auto px-4 py-3 flex justify-between items-center"
       >
         <a href="#" class="text-xl font-bold text-primary-600">Immanich</a>
+
+        <!-- Desktop Nav -->
         <div class="hidden md:flex space-x-8">
           <a href="#about" class="nav-link">About</a>
           <a href="#experience" class="nav-link">Experience</a>
@@ -122,17 +124,32 @@
           <a href="#projects" class="nav-link">Projects</a>
           <a href="#contact" class="nav-link">Contact</a>
         </div>
-        <button class="md:hidden">
-          <i class="fas fa-bars text-primary-600"></i>
+
+        <!-- Mobile Menu Button -->
+        <button id="menu-btn" class="md:hidden">
+          <i class="fas fa-bars text-primary-600 text-2xl"></i>
         </button>
+      </div>
+
+      <!-- Mobile Nav -->
+      <!-- Mobile Nav -->
+      <div
+        id="mobile-menu"
+        class="max-h-0 overflow-hidden opacity-0 transition-all duration-500 ease-in-out flex-col space-y-4 md:hidden"
+      >
+        <a href="#about" class="nav-link block">About</a>
+        <a href="#experience" class="nav-link block">Experience</a>
+        <a href="#skills" class="nav-link block">Skills</a>
+        <a href="#projects" class="nav-link block">Projects</a>
+        <a href="#contact" class="nav-link block">Contact</a>
       </div>
     </nav>
 
     <!-- Hero Section -->
     <section class="min-h-screen flex items-center pt-16 pb-20">
-      <div class="container mx-auto px-4">
+      <div class="container mx-auto px-6">
         <div class="flex flex-col md:flex-row items-center">
-          <div class="md:w-1/2 mb-10 md:mb-0 animate-on-scroll">
+          <div class="md:w-1/2 mb-10 md:mb-0 animate-on-scroll ml-6 md:ml-12">
             <h1
               class="text-4xl md:text-5xl lg:text-6xl font-bold text-dark-900 mb-4"
             >
@@ -817,6 +834,35 @@
 
       document.querySelectorAll(".animate-on-scroll").forEach((el) => {
         observer.observe(el);
+      });
+
+      document.addEventListener("DOMContentLoaded", function () {
+        const menuBtn = document.getElementById("menu-btn");
+        const mobileMenu = document.getElementById("mobile-menu");
+
+        menuBtn.addEventListener("click", () => {
+          if (mobileMenu.classList.contains("max-h-0")) {
+            // Open menu
+            mobileMenu.classList.remove("max-h-0", "opacity-0");
+            mobileMenu.classList.add(
+              "max-h-screen",
+              "opacity-100",
+              "flex",
+              "px-6",
+              "pb-4"
+            );
+          } else {
+            // Close menu
+            mobileMenu.classList.remove(
+              "max-h-screen",
+              "opacity-100",
+              "px-6",
+              "pb-4"
+            );
+            mobileMenu.classList.add("max-h-0", "opacity-0");
+            setTimeout(() => mobileMenu.classList.remove("flex"), 500);
+          }
+        });
       });
 
       document.addEventListener("DOMContentLoaded", function () {
