--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
       .nav-link:hover::after {
         width: 100%;
       }
+
+      .card-animate {
+        opacity: 0;
+        transform: scale(0.9);
+        transition: all 0.6s ease-out;
+      }
+
+      .card-animate.visible {
+        opacity: 1;
+        transform: scale(1);
+        background-color: #0284c7; /* Tailwind primary-600 */
+        color: #fff;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      }
+      .card-animate.visible i {
+        color: #fff;
+      }
     </style>
   </head>
   <body class="bg-white text-dark-800 font-sans antialiased">
@@ -213,6 +230,44 @@
           </p>
           <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
             <div
+              class="card-animate bg-white p-6 rounded-lg shadow text-center cursor-pointer"
+            >
+              <div class="text-2xl text-primary-600 mb-2">
+                <i class="fas fa-laptop-code"></i>
+              </div>
+              <div class="font-medium">Web Development</div>
+            </div>
+
+            <div
+              class="card-animate bg-white p-6 rounded-lg shadow text-center cursor-pointer"
+            >
+              <div class="text-2xl text-primary-600 mb-2">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+              <div class="font-medium">Mobile Apps</div>
+            </div>
+
+            <div
+              class="card-animate bg-white p-6 rounded-lg shadow text-center cursor-pointer"
+            >
+              <div class="text-2xl text-primary-600 mb-2">
+                <i class="fas fa-database"></i>
+              </div>
+              <div class="font-medium">Database Design</div>
+            </div>
+
+            <div
+              class="card-animate bg-white p-6 rounded-lg shadow text-center cursor-pointer"
+            >
+              <div class="text-2xl text-primary-600 mb-2">
+                <i class="fas fa-paint-brush"></i>
+              </div>
+              <div class="font-medium">UI/UX Design</div>
+            </div>
+          </div>
+
+          <!-- <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+            <div
               class="group bg-white p-6 rounded-lg shadow text-center transition transform hover:scale-105 hover:shadow-lg hover:bg-primary-600 hover:text-white cursor-pointer"
             >
               <div
@@ -255,7 +310,7 @@
               </div>
               <div class="font-medium">UI/UX Design</div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -821,6 +876,22 @@
     </footer>
 
     <script>
+      // Animate About section cards on scroll
+      const cards = document.querySelectorAll(".card-animate");
+      const cardObserver = new IntersectionObserver(
+        (entries) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add("visible");
+              cardObserver.unobserve(entry.target); // Animate only once
+            }
+          });
+        },
+        { threshold: 0.3 }
+      );
+
+      cards.forEach((card) => cardObserver.observe(card));
+
       const observer = new IntersectionObserver(
         (entries) => {
           entries.forEach((entry) => {
