--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl group"
               >
                 <img
-                  src="2by2(edited).png"
+                  src="wew.jpg"
                   alt="Lord Immanuel S. Juanich"
                   class="w-full h-full object-cover transform transition-transform duration-500 ease-out group-hover:scale-110"
                 />
