--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/2 mb-10 md:mb-0 animate-on-scroll ml-6 md:ml-12">
             <h1
-              class="text-4xl md:text-5xl lg:text-6xl font-bold text-dark-900 mb-4"
+              class="text-4xl md:text-5xl lg:text-6xl font-bold text-dark-900 mb-4 whitespace-nowrap"
             >
               Lord Immanuel S. Juanich
             </h1>
